// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformToNestObject should combine all the array fields 1`] = `
Object {
  "email": Array [
    "asdasd@dsad.com",
    "asdasd@.com",
  ],
  "firstName": Array [
    "asdasd",
    "asdasd",
  ],
  "lastName": Array [
    "asdasd",
    "asd",
  ],
  "test": "test",
}
`;

exports[`transformToNestObject should combine array object correctly 1`] = `
Object {
  "name": Array [
    Object {
      "firstName": "testFirst",
      "lastName": "testLast",
    },
  ],
  "test": Array [
    Object {
      "task": "testLast",
      "what": "testLast",
    },
    Object {
      "what": Array [
        undefined,
        Object {
          "test": "testLast",
        },
      ],
    },
  ],
}
`;

exports[`transformToNestObject should combine object correctly 1`] = `
Object {
  "name": Object {
    "firstName": "testFirst",
    "lastName": Object {
      "bill": Object {
        "luo": "testLast",
      },
    },
  },
}
`;

exports[`transformToNestObject should combine with results 1`] = `
Object {
  "name": "testFirst",
  "name1": "testFirst",
  "name2": "testFirst",
}
`;

exports[`transformToNestObject should handle quoted values 1`] = `
Object {
  "name": Object {
    "foobar": "testFirst",
  },
}
`;

exports[`transformToNestObject should handle quoted values 2`] = `
Object {
  "name": Object {
    "b2ill": "testFirst",
  },
}
`;

exports[`transformToNestObject should return default name value 1`] = `
Object {
  "name": "testFirst",
}
`;
